Alignment fixes on landing page with events/friends sections. Changed POST request body to match BE endpoint for POST event.

--- a/src/Components/EventCard/EventCard.css
+++ b/src/Components/EventCard/EventCard.css
@@ -4,8 +4,9 @@
     align-items: center;
     width: 100%;
     height: 5rem;
-    margin: 1rem;
+    margin: 1rem 0;
+    padding: 1em;
     background-color: rgb(26, 26, 26);
     border-radius: .5rem;
-
+    box-sizing: border-box;
 }
