--- a/src/Components/SingleFriendCard/SingleFriendCard.css
+++ b/src/Components/SingleFriendCard/SingleFriendCard.css
@@ -1,10 +1,17 @@
-.single-friend-card {
+.single-friend {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 90%;
-    height: 5rem;
-    margin: 0.21rem;
     background-color: rgb(26, 26, 26);
-    padding-top: 6rem;
+    height: 10em;
+    margin: .5rem 0;
+    h3, p {
+        margin: 0;
+    }
+}
+.friend-property {
+    font-weight: bold;
+}
+.friend-text {
+    width: 15em;
 }
